# MusicDetector

./: CMakeLists.txt
include/: audio_capture.h  display_renderer.h  fingerprinter.h  matcher.h  metadata_manager.h  types.h
src/: fingerprinter.cc  fingerprinter.cpp  fingerprinter_db.cc  main.cc  main.cpp
tools/: fingerprint_song.cc  fingerprint_song.cpp  lrc_parser.cc
